last commit now

--- a/MvcCsharp/Views/Shared/_Layout.cshtml
+++ b/MvcCsharp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("HOme2", "GetHome", "Home")</li>
+                    <li>@Html.ActionLink("Create Person", "CreatePerson", "Persons")</li>
+                    <li>@Html.ActionLink("List Person", "ListPersons", "Persons")</li>
 
                 </ul>
             </div>
