--- a/MvcCsharp/Views/Persons/ListPersons.cshtml
+++ b/MvcCsharp/Views/Persons/ListPersons.cshtml
@@ -7,6 +7,19 @@
 {
     <h3 class="alert alert-success">@TempData["Succes"]</h3>
 }
+<br />
+<form method="get">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3">
+                <input type="text" name="CustomerName" class="form-control" placeholder="Search Custoemr" />
+            </div>
+            <div class="col-md-2">
+                <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Search</button>
+            </div>
+        </div>
+    </div>
+</form>
 <h2>ListPersons</h2>
 
 <p>
