--- a/MvcCsharp/Views/Persons/ListPersons.cshtml
+++ b/MvcCsharp/Views/Persons/ListPersons.cshtml
@@ -7,6 +7,15 @@
 {
     <h3 class="alert alert-success">@TempData["Succes"]</h3>
 }
+
+@if (TempData["SuccesfullyDeleted"] != null)
+{
+    <h3 class="alert alert-success">@TempData["SuccesfullyDeleted"]</h3>
+}@if (TempData["Succes"] != null)
+{
+    <h3 class="alert alert-success">@TempData["Succes"]</h3>
+}
+
 <br />
 <form method="get">
     <div class="row">
@@ -60,7 +69,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary btn-xs" }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success btn-xs" }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-xs" })
+                @Html.ActionLink("-", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-trash btn-danger btn-xs" })
             </td>
         </tr>
     }
