updated last commited

--- a/MvcCsharp/Views/Persons/ListPersons.cshtml
+++ b/MvcCsharp/Views/Persons/ListPersons.cshtml
@@ -34,7 +34,7 @@
 <p>
     @Html.ActionLink("Create New", "CreatePerson")
 </p>
-<table class="table">
+<table class="table table-bordered table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
