--- a/MvcCsharp/Views/Persons/Details.cshtml
+++ b/MvcCsharp/Views/Persons/Details.cshtml
@@ -43,6 +43,14 @@
             @Html.DisplayFor(model => model.Date)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+
+        <dd>
+            <img src="~/Persons/GetImage/@Model.Id" width="100" height="100" class="img-rounded" />
+        </dd>
+
     </dl>
 </div>
 <p>
