--- a/MvcCsharp/Views/Persons/ListPersons.cshtml
+++ b/MvcCsharp/Views/Persons/ListPersons.cshtml
@@ -36,6 +36,10 @@
 </p>
 <table class="table">
     <tr>
+
+        <th>
+            @Html.DisplayNameFor(model => model.Image)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
@@ -53,25 +57,28 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Addres)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary btn-xs" }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success btn-xs" }) |
-                @Html.ActionLink("-", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-trash btn-danger btn-xs" })
-            </td>
-        </tr>
+    <tr>
+        <td>
+            <img src="~/Persons/GetImage/@item.Id" width="40" height="30" class="img-rounded"/>
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Addres)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Phone)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Date)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary btn-xs" }) |
+            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success btn-xs" }) |
+            @Html.ActionLink("-", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-trash btn-danger btn-xs" })
+        </td>
+    </tr>
     }
 
 </table>
