--- a/MvcCsharp/Views/Persons/ListPersons.cshtml
+++ b/MvcCsharp/Views/Persons/ListPersons.cshtml
@@ -59,7 +59,7 @@
     {
     <tr>
         <td>
-            <img src="~/Persons/GetImage/@item.Id" width="40" height="30" class="img-rounded"/>
+            <img src="~/Persons/GetImage/@item.Id" width="40" height="30" class="img-circle"/>
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
@@ -77,6 +77,7 @@
             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary btn-xs" }) |
             @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success btn-xs" }) |
             @Html.ActionLink("-", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-trash btn-danger btn-xs" })
+            <a href="~/Persons/DownloadImage/@item.Id" class="btn btn-warning btn-xs" ><span class="glyphicon glyphicon-download"></span>Download</a>
         </td>
     </tr>
     }
