--- a/MvcCsharp/Views/Persons/ListPersons.cshtml
+++ b/MvcCsharp/Views/Persons/ListPersons.cshtml
@@ -77,7 +77,7 @@
             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary btn-xs" }) |
             @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success btn-xs" }) |
             @Html.ActionLink("-", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-trash btn-danger btn-xs" })
-            <a href="~/Persons/DownloadImage/@item.Id" class="btn btn-warning btn-xs" ><span class="glyphicon glyphicon-download"></span>Download</a>
+            <a href="@Url.Action("DownloadImage","Persons",new { id = item.Id })" class="btn btn-warning btn-xs" ><span class="glyphicon glyphicon-download"></span>Download</a>
         </td>
     </tr>
     }
