--- a/MvcCsharp/Views/Account/Login.cshtml
+++ b/MvcCsharp/Views/Account/Login.cshtml
@@ -5,7 +5,10 @@
 }
 
 <h2>Login</h2>
-
+@if (TempData["ErrorLogin"] != null)
+{
+    <h3 class="alert alert-danger">@TempData["ErrorLogin"]</h3>
+}
 @using (Html.BeginForm("Login","Account",FormMethod.Post,new {login=Model, returnUrl = ViewBag.ReturnUrl }))
 {
     @Html.AntiForgeryToken()
